# refstudio

./: .env.example  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  CONTRIBUTING.md  README.md  codecov.yml  index.html  knip.ts  menu.json  package.json  playwright.config.ts  pyproject.toml  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1694621066849-52aeeeb8afcf5.mjs
.github/jobs/: warm-up-node.yml
.github/workflows/: build.yml  commit-lint.yml  continuous-delivery.yml  cut-release.yml  node-continuous-integration.yml  on-push.yml  playwright.yml  python-continuous-integration.yml  test-sidecar-binary.yml  warm-up-python.yml  warm-up-rust.yml
.husky/: pre-push
binaries/: build-target.sh
e2e/: example.spec.ts  welcome-screen.spec.ts
playwright-report/: index.html
python/: README.md  api.schema.json  cli.schema.json  codegen_cleanup.py  combined.openapi.json  generate_menus.py  generate_schema.py  main.py  openapi.json  web.py
python/sidecar/: __main__.py  api.py  chat.py  cli.py  config.py  filesystem.py  functions.py  http.py  ingest.py  interact.py  meta.py  projects.py  prompts.py  pydantic_utils.py  ranker.py  rewrite.py  search.py  settings.py  shared.py  stopwords.py  storage.py  typing.py
python/tests/: conftest.py  helpers.py  test_chat.py  test_functions.py  test_http.py  test_ingest.py  test_interact.py  test_projects.py  test_prompts.py  test_ranker.py  test_rewrite.py  test_rewriter.py  test_search.py  test_settings.py  test_shared.py  test_storage.py
scripts/: codegen.sh  move_binary.py  move_binary.sh  remove_binary.sh  reset_refstudio.sh  reset_uploads.sh
src/: AIView.tsx  App.tsx  AppStartup.tsx  EditorPanel.tsx  EditorView.tsx  EventsListener.save.test.tsx  EventsListener.test.tsx  EventsListener.tsx  FoldersView.tsx  Footer.tsx  GreetingPanel.tsx  Label.test.tsx  Label.tsx  Reference.tsx  ReferencesPanel.tsx  ReferencesView.tsx  RichTextEditorPanel.css  RichTextEditorPanel.tsx  Settings.tsx  SettingsModal.tsx  cx.ts  events.ts  events.tsx  filesReducer.tsx  filesystem.ts  filesystem.tsx  index.css  main.tsx  splash.tsx  vite-env.d.ts  web.ts
src-python/: main.py  test.xml
src-python/sidecar/: ingest.py  shared.py  typing.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: menu-gen.rs  menu.rs
src/CollapsibleBlock/: CollapsibleBlock.tsx  styles.css
src/Components/: FileTree.tsx  PanelSection.tsx  PanelWrapper.tsx  PrimarySideBar.tsx  TabPane.tsx
src/LexicalEditor/: LexicalEditor.tsx
src/PdfViewer/: index.css  index.tsx
src/Reference/: ReferenceNode.ts  ReferencesList.css  ReferencesList.tsx  suggestion.ts
src/TipTapEditor/: MenuBar.css  MenuBar.tsx  RefStudioDocument.ts  TipTapEditor.css  TipTapEditor.tsx  TipTapEditorConfigs.tsx  index.tsx  test-fixtures.ts
src/__tests__/: AppStartup.test.tsx
src/ai/: AIPanel.tsx
src/api/: api-paths.ts  api-types.ts  api.ts  chat.test.ts  chat.ts  cli.ts  completion.ts  filesystemAPI.ts  (+14 more)
(+731 files in other folders)
