[tool.poetry]
name = "refstudio"
version = "0.1.0"
description = ""
authors = ["Greg Reda <gjreda+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
grobid-tei-xml = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.11.0"
ipython = "^8.13.2"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
