[tool.poetry]
name = "refstudio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"  # pyinstaller requires Python <3.12
grobid-tei-xml = "^0.1.3"
grobid-client-python = "^0.0.5"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
pydantic = "^1.10.9"
rank-bm25 = "^0.2.2"
pypdf = "^3.11.1"
tenacity = "^8.2.2"
strenum = "^0.4.15"
semanticscholar = "^0.4.1"
fastapi = {extras = ["standard"], version = "^0.101.1"}
uvicorn = "^0.23.2"
httpx = "^0.24.1"
python-multipart = "^0.0.6"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.270"
pyinstaller = "^5.11.0"
ipdb = "^0.13.13"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120  # same length we have prettier/JS set to

[tool.coverage.run]
source = ["python"]
omit = ["*/tests/*"]